Traefik-demo/base/traefik/04-dashboard-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-system
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
      kind: Rule
      services:
        # 'api@internal' is a special service name to access the Traefik API/Dashboard
        - name: api@internal
          kind: TraefikService
